# paiza

./: black.sh  pyproject.toml
src/a066/: main.py  work_record.py
tests/a066/: test_work_record.py
