[tool.poetry]
name = "paiza"
version = "0.1.0"
description = ""
authors = ["kento.toriumi <kento.toriumi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py310"]
line-length = 88
force-exclude = """
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .venv
)
"""


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -vv -p no:warnings --ff --tb=short -s"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
